docs/envoy/v1.31.3/_sources/api-v3/extensions/network/dns_resolver/cares/v3/cares_dns_resolver.proto.rst.txt
.. _envoy_v3_api_file_envoy/extensions/network/dns_resolver/cares/v3/cares_dns_resolver.proto:

c-ares DNS resolver (proto)
===========================

.. _extension_envoy.network.dns_resolver.cares:

This extension has the qualified name ``envoy.network.dns_resolver.cares``


.. note::
  

  This extension is intended to be robust against both untrusted downstream and
  upstream traffic.

.. tip::
  This extension extends and can be used with the following extension category:


  - :ref:`envoy.network.dns_resolver <extension_category_envoy.network.dns_resolver>`



  This extension must be configured with one of the following type URLs:



  - :ref:`type.googleapis.com/envoy.extensions.network.dns_resolver.cares.v3.CaresDnsResolverConfig <envoy_v3_api_msg_extensions.network.dns_resolver.cares.v3.CaresDnsResolverConfig>`







.. _envoy_v3_api_msg_extensions.network.dns_resolver.cares.v3.CaresDnsResolverConfig:

extensions.network.dns_resolver.cares.v3.CaresDnsResolverConfig
---------------------------------------------------------------


:repo:`[extensions.network.dns_resolver.cares.v3.CaresDnsResolverConfig proto] <api/envoy/extensions/network/dns_resolver/cares/v3/cares_dns_resolver.proto#L23>`

Configuration for c-ares DNS resolver.



.. code-block:: json
  :force:

  {
    "resolvers": [],
    "use_resolvers_as_fallback": ...,
    "filter_unroutable_families": ...,
    "dns_resolver_options": {...},
    "udp_max_queries": {...}
  }

.. _envoy_v3_api_field_extensions.network.dns_resolver.cares.v3.CaresDnsResolverConfig.resolvers:


resolvers
  (**repeated** :ref:`config.core.v3.Address <envoy_v3_api_msg_config.core.v3.Address>`, *REQUIRED*) A list of dns resolver addresses.
  :ref:`use_resolvers_as_fallback<envoy_v3_api_field_extensions.network.dns_resolver.cares.v3.CaresDnsResolverConfig.use_resolvers_as_fallback>`
  below dictates if the DNS client should override system defaults or only use the provided
  resolvers if the system defaults are not available, i.e., as a fallback.


.. _envoy_v3_api_field_extensions.network.dns_resolver.cares.v3.CaresDnsResolverConfig.use_resolvers_as_fallback:


use_resolvers_as_fallback
  (`bool <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) If true use the resolvers listed in the
  :ref:`resolvers<envoy_v3_api_field_extensions.network.dns_resolver.cares.v3.CaresDnsResolverConfig.resolvers>`
  field only if c-ares is unable to obtain a
  nameserver from the system (e.g., /etc/resolv.conf).
  Otherwise, the resolvers listed in the resolvers list will override the default system
  resolvers. Defaults to false.


.. _envoy_v3_api_field_extensions.network.dns_resolver.cares.v3.CaresDnsResolverConfig.filter_unroutable_families:


filter_unroutable_families
  (`bool <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) The resolver will query available network interfaces and determine if there are no available
  interfaces for a given IP family. It will then filter these addresses from the results it
  presents. e.g., if there are no available IPv4 network interfaces, the resolver will not
  provide IPv4 addresses.


.. _envoy_v3_api_field_extensions.network.dns_resolver.cares.v3.CaresDnsResolverConfig.dns_resolver_options:


dns_resolver_options
  (:ref:`config.core.v3.DnsResolverOptions <envoy_v3_api_msg_config.core.v3.DnsResolverOptions>`) Configuration of DNS resolver option flags which control the behavior of the DNS resolver.


.. _envoy_v3_api_field_extensions.network.dns_resolver.cares.v3.CaresDnsResolverConfig.udp_max_queries:


udp_max_queries
  (`UInt32Value <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#uint32value>`_) This option allows for number of UDP based DNS queries to be capped. Note, this
  is only applicable to c-ares DNS resolver currently.


